Added the required changes

--- a/Html_Exercise.html
+++ b/Html_Exercise.html
@@ -20,14 +20,14 @@
       </h1>
       <p>
         <span style="color:red;">
-          <b>Please note:</b>
+          <b>&nbsp;Please note:</b>
         </span>
-        This example demonstrates how HTML forms can be used.Submit button should submit the button and reset
+         This example demonstrates how HTML forms can be used.Submit button should submit the button and reset &nbsp; &nbsp; 
         button should reset the form(revert changes in the form fields).The form layout should be the same as below.
       </p>
 
       <form name="contact_form" action="http:\\" method="POST">
-        <table>
+        <table cellpadding="5">
           <b>
             &nbsp; &nbsp;Contact Form
           </b>
@@ -201,8 +201,7 @@
           </tr>
 
           <tr>
-            <td><input type='submit' value='Submit'></td>
-            <td><input type='reset' value='Reset'></td>
+            <td><input type='submit' value='Submit'><input type='reset' value='Reset'></td>
           </tr>
 
         </table>
